name:                level-graphs

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            Project to generate (random) 'level graphs', graphs with integer vertex labelings such that an edge (v,w) exists only if level v < level w

-- A longer description of the package.
-- description:         

-- URL for the project homepage or repository.
homepage:            https://github.com/goens/level-graphs

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Andres Goens

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          andres.goens@tu-dresden.de

-- A copyright notice.
-- copyright:           

category:            Data

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


library
  -- Modules exported by the library.
  exposed-modules: LevelGraphs
  
  -- Modules included in this library but not exported.
  -- other-modules:       
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
  
  -- Other library packages from which modules are imported.
  build-depends:       base,
                       MonadRandom,
                       random,
                       fgl,
                       cmdargs,
                       containers

  
  -- Directories containing source files.
  hs-source-dirs:      src
  
  -- Base language which the package is written in.
  default-language:    Haskell98
  