name:                level-graphs

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            Project to generate (random) 'level graphs', graphs with integer vertex labelings such that an edge (v,w) exists only if level v < level w

-- A longer description of the package.
-- description:

-- URL for the project homepage or repository.
homepage:            https://github.com/goens/rand-code-graph

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Andres Goens

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          andres.goens@tu-dresden.de

-- A copyright notice.
-- copyright:

category:            Data

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


library
  exposed-modules: LevelGraphs
                 , Backend
  other-modules:   Backends.Ohua
                 , Backends.Haskell
                 , Backends.Haxl
                 , Backends.Clojure
                 , Backends.Muse
  build-depends:       base,
                       MonadRandom,
                       random,
                       fgl >= 5.5.2,
                       containers,
                       tuple
  hs-source-dirs:      src
  default-language:    Haskell98

executable random-level-graphs
  build-depends:       base,
                       level-graphs,
                       random,
                       fgl >= 5.5.2,
                       cmdargs,
                       MonadRandom,
                       containers,
                       tuple
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell98

-- -- For testing later with examples
-- test-suite haxl-test-generated-graph-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , haxl-test-generated-graph
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010
